# EditPropagation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
results/AppProp/: 00_config.json  01_config.json  02_config.json  05_config.json
results/KD/: 01_config.json  03_config.json  04_config.json  05_video_config.json
src/: AppProp.cpp  AppProp.h  AppPropKDTree.cpp  AppPropKDTree.h  CMakeLists.txt  Common.h  Config.cpp  Config.h  EditPropagation.cpp  EditPropagation.h  EditsSolver.cpp  EditsSolver.h  KDTree.cpp  KDTree.h  NearestNeighbor.cpp  NearestNeighbor.h  main.cpp
